--- a/categories.html
+++ b/categories.html
@@ -13,15 +13,15 @@
 
             <meta property="og:type" content="website"/>
             <meta property="og:title" content="LovelyMonkeyM"/>
-            <meta property="og:url" content=""/>
+            <meta property="og:url" content="lovelymonkeym.github.io"/>
             <meta property="og:description" content="LovelyMonkeyM"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <link href="/theme/css/pygments.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+        <link rel="stylesheet" href="lovelymonkeym.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="lovelymonkeym.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+    <link href="lovelymonkeym.github.io/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link href="lovelymonkeym.github.io/theme/css/pygments.css" rel="stylesheet">
+    <link rel="stylesheet" href="lovelymonkeym.github.io/theme/css/style.css" type="text/css"/>
     <!-- JavaScript plugins (requires jQuery) -->
     <script src="//code.jquery.com/jquery.min.js"></script>
 
@@ -37,16 +37,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="" class="navbar-brand">LovelyMonkeyM</a>
+            <a href="lovelymonkeym.github.io" class="navbar-brand">LovelyMonkeyM</a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="/category/life.html">Life</a>
+                            <a href="lovelymonkeym.github.io/category/life.html">Life</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
+                <li><a href="lovelymonkeym.github.io/archives.html"><i class="icon-th-list"></i>Archives</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -77,15 +77,20 @@
 
 
 
-            <li class="list-group-item"><a href="/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+            <li class="list-group-item"><a href="lovelymonkeym.github.io/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
                 <li class="list-group-item tag-1">
-                    <a href="/tag/writing.html">
+                    <a href="lovelymonkeym.github.io/tag/life.html">
+                        Life
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="lovelymonkeym.github.io/tag/writing.html">
                         Writing
                     </a>
                 </li>
-                <li class="list-group-item tag-1">
-                    <a href="/tag/life.html">
-                        Life
+                <li class="list-group-item tag-4">
+                    <a href="lovelymonkeym.github.io/tag/tv.html">
+                        TV
                     </a>
                 </li>
         </ul>
@@ -95,9 +100,9 @@
 </div>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="lovelymonkeym.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="lovelymonkeym.github.io/theme/js/respond.min.js"></script>
 </body>
 </html>
