--- a/archives.html
+++ b/archives.html
@@ -44,6 +44,9 @@
                         <li >
                             <a href="lovelymonkeym.github.io/category/life.html">Life</a>
                         </li>
+                        <li >
+                            <a href="lovelymonkeym.github.io/category/linux.html">Linux</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="lovelymonkeym.github.io/archives.html"><i class="icon-th-list"></i>Archives</a></li>
@@ -62,6 +65,8 @@
         <dl>
                 <dt>四 19 十二月 2013</dt>
                 <dd><a href='lines-in-house-of-cards.html'>Lines in 'House Of Cards'</a></dd>
+                <dt>四 19 十二月 2013</dt>
+                <dd><a href='linuxde-rootdeng-lu-he-mi-ma-she-zhi.html'>Linux的root登录和密码设置</a></dd>
                 <dt>四 06 六月 2013</dt>
                 <dd><a href='my-super-beginng.html'>My Super Beginng</a></dd>
         </dl>
@@ -88,13 +93,18 @@
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="lovelymonkeym.github.io/tag/tv.html">
-                        TV
+                    <a href="lovelymonkeym.github.io/tag/writing.html">
+                        Writing
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="lovelymonkeym.github.io/tag/writing.html">
-                        Writing
+                    <a href="lovelymonkeym.github.io/tag/linux.html">
+                        Linux
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="lovelymonkeym.github.io/tag/tv.html">
+                        TV
                     </a>
                 </li>
         </ul>
