--- a/tags.html
+++ b/tags.html
@@ -44,6 +44,9 @@
                         <li >
                             <a href="lovelymonkeym.github.io/category/life.html">Life</a>
                         </li>
+                        <li >
+                            <a href="lovelymonkeym.github.io/category/linux.html">Linux</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="lovelymonkeym.github.io/archives.html"><i class="icon-th-list"></i>Archives</a></li>
@@ -59,6 +62,7 @@
     <section id="tags">
         <h1>Tags for LovelyMonkeyM</h1>
         <ul>                <li><a href="lovelymonkeym.github.io/tag/life.html">Life</a> (2)</li>
+                <li><a href="lovelymonkeym.github.io/tag/linux.html">Linux</a> (1)</li>
                 <li><a href="lovelymonkeym.github.io/tag/tv.html">TV</a> (1)</li>
                 <li><a href="lovelymonkeym.github.io/tag/writing.html">Writing</a> (1)</li>
         </ul>
@@ -85,13 +89,18 @@
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="lovelymonkeym.github.io/tag/tv.html">
-                        TV
+                    <a href="lovelymonkeym.github.io/tag/writing.html">
+                        Writing
                     </a>
                 </li>
                 <li class="list-group-item tag-4">
-                    <a href="lovelymonkeym.github.io/tag/writing.html">
-                        Writing
+                    <a href="lovelymonkeym.github.io/tag/linux.html">
+                        Linux
+                    </a>
+                </li>
+                <li class="list-group-item tag-4">
+                    <a href="lovelymonkeym.github.io/tag/tv.html">
+                        TV
                     </a>
                 </li>
         </ul>
