--- a/categories.html
+++ b/categories.html
@@ -1,117 +1,44 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:og="http://ogp.me/ns#"
-      xmlns:fb="https://www.facebook.com/2008/fbml">
+<html lang="zh">
 <head>
-    <title>LovelyMonkeyM - Categories</title>
-    <!-- Using the latest rendering mode for IE -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>LovelyMonkeyM</title>
+        <meta charset="utf-8" />
 
-    <!-- Open Graph tags -->
+        <link rel="stylesheet" href="lovelymonkeym.github.io/theme/css/rdark.css" />
+	<link rel="stylesheet" type="text/css" href="lovelymonkeym.github.io/theme/css/main.css" />
+        <link href="lovelymonkeym.github.io/" type="application/atom+xml" rel="alternate" title="LovelyMonkeyM ATOM Feed" /><!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+	
+<!-- Using MathJax, with the delimiters $ -->
+<!-- Conflict with pygments for the .mo and .mi -->
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+  "HTML-CSS": {
+  styles: {
+  ".MathJax .mo, .MathJax .mi": {color: "black ! important"}}
+  },
+  tex2jax: {inlineMath: [['$','$'], ['\\\\(','\\\\)']],processEscapes: true}
+  });
+</script>
 
-            <meta property="og:type" content="website"/>
-            <meta property="og:title" content="LovelyMonkeyM"/>
-            <meta property="og:url" content="lovelymonkeym.github.io"/>
-            <meta property="og:description" content="LovelyMonkeyM"/>
-
-    <!-- Bootstrap -->
-        <link rel="stylesheet" href="lovelymonkeym.github.io/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="lovelymonkeym.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
-    <link href="lovelymonkeym.github.io/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <link href="lovelymonkeym.github.io/theme/css/pygments.css" rel="stylesheet">
-    <link rel="stylesheet" href="lovelymonkeym.github.io/theme/css/style.css" type="text/css"/>
-    <!-- JavaScript plugins (requires jQuery) -->
-    <script src="//code.jquery.com/jquery.min.js"></script>
-
-
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
 </head>
-<body>
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="lovelymonkeym.github.io" class="navbar-brand">LovelyMonkeyM</a>
-        </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav">
-                        <li >
-                            <a href="lovelymonkeym.github.io/category/life.html">Life</a>
-                        </li>
-                        <li >
-                            <a href="lovelymonkeym.github.io/category/linux.html">Linux</a>
-                        </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="lovelymonkeym.github.io/archives.html"><i class="icon-th-list"></i>Archives</a></li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-</nav>
-<!-- /.navbar -->
-<div class="container">
-    <div class="row">
-        <div class="col-lg-9">
-    <section id="categories">
-        <h1>Categories for LovelyMonkeyM</h1>
-        <ul>
-                <li><a href="category/life.html">Life</a></li>
-                <li><a href="category/linux.html">Linux</a></li>
-        </ul>
-    </section>
-        </div>
-        <div class="col-lg-3 well well-sm" id="sidebar">
-<aside>
-    <section>
-        <ul class="list-group list-group-flush">
-                <li class="list-group-item"><h4><i class="icon-home icon-large"></i>Social</h4></li>
-                    <li class="list-group-item"><a href="#"><i
-                            class="icon-You can add links in your config file-sign icon-large"></i>You can add links in your config file
-                    </a></li>
-                    <li class="list-group-item"><a href="#"><i
-                            class="icon-Another social link-sign icon-large"></i>Another social link
-                    </a></li>
+</head>
 
-
-
-            <li class="list-group-item"><a href="lovelymonkeym.github.io/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-                <li class="list-group-item tag-1">
-                    <a href="lovelymonkeym.github.io/tag/life.html">
-                        Life
-                    </a>
-                </li>
-                <li class="list-group-item tag-4">
-                    <a href="lovelymonkeym.github.io/tag/tv.html">
-                        TV
-                    </a>
-                </li>
-                <li class="list-group-item tag-4">
-                    <a href="lovelymonkeym.github.io/tag/writing.html">
-                        Writing
-                    </a>
-                </li>
-                <li class="list-group-item tag-4">
-                    <a href="lovelymonkeym.github.io/tag/linux.html">
-                        Linux
-                    </a>
-                </li>
-        </ul>
-    </section>
-</aside>        </div>
-    </div>
-</div>
-
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="lovelymonkeym.github.io/theme/js/bootstrap.min.js"></script>
-
-<!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="lovelymonkeym.github.io/theme/js/respond.min.js"></script>
+<body id="index" class="home">
+        <header id="banner" class="body">
+                <h1><a href="lovelymonkeym.github.io">LovelyMonkeyM <strong></strong></a></h1>
+        </header><!-- /#banner -->
+        <nav id="menu"><ul>
+        </ul></nav><!-- /#menu -->
+<ul>
+    <li><a href="lovelymonkeym.github.io/category/life.html">Life</a></li>
+    <li><a href="lovelymonkeym.github.io/category/linux.html">Linux</a></li>
+</ul>
+        <footer id="contentinfo" class="body">
+                <address id="about" class="vcard body">
+                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
+                which takes great advantage of <a href="http://python.org">Python</a>.
+                </address><!-- /#about -->
+        </footer><!-- /#contentinfo -->
 </body>
 </html>
