--- a/lines-in-house-of-cards.html
+++ b/lines-in-house-of-cards.html
@@ -74,6 +74,11 @@
 						<i class="icon-folder-open icon-large"></i>Linux
 					</a>
                   </li>
+                  <li >
+                    <a href="/category/other.html">
+						<i class="icon-folder-open icon-large"></i>Other
+					</a>
+                  </li>
 
                           <ul class="nav pull-right">
                                 <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
@@ -158,8 +163,28 @@
     <i class="icon-folder-open icon-large"></i>Linux
 </a>
 </li>
+<li>
+<a href="/category/other.html">
+    <i class="icon-folder-open icon-large"></i>Other
+</a>
+</li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-4">
+    <a href="/tag/tv.html">
+        <i class="icon-tag icon-large"></i>TV
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/exam.html">
+        <i class="icon-tag icon-large"></i>exam
+    </a>
+</li>
+<li class="tag-1">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
 <li class="tag-4">
     <a href="/tag/linux.html">
         <i class="icon-tag icon-large"></i>Linux
@@ -170,14 +195,19 @@
         <i class="icon-tag icon-large"></i>Writing
     </a>
 </li>
-<li class="tag-1">
-    <a href="/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
+<li class="tag-4">
+    <a href="/tag/linuxvim.html">
+        <i class="icon-tag icon-large"></i>Linux，Vim
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/tv.html">
-        <i class="icon-tag icon-large"></i>TV
+    <a href="/tag/certification.html">
+        <i class="icon-tag icon-large"></i>certification
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/patent.html">
+        <i class="icon-tag icon-large"></i>patent
     </a>
 </li>
 
