--- a/archives.html
+++ b/archives.html
@@ -74,6 +74,11 @@
 						<i class="icon-folder-open icon-large"></i>Linux
 					</a>
                   </li>
+                  <li >
+                    <a href="/category/other.html">
+						<i class="icon-folder-open icon-large"></i>Other
+					</a>
+                  </li>
 
                           <ul class="nav pull-right">
                                 <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
@@ -93,6 +98,10 @@
 <h1>Archives for LovelyMonkeyM</h1>
 
 <dl>
+	<dt>六 28 十二月 2013</dt>
+	<dd><a href='zhuan-li-dai-li-ren-kao-shi.html'>专利代理人考试</a></dd>
+	<dt>五 27 十二月 2013</dt>
+	<dd><a href='vimxiu-gai-pei-zhi.html'>Vim修改配置</a></dd>
 	<dt>四 19 十二月 2013</dt>
 	<dd><a href='lines-in-house-of-cards.html'>Lines in 'House Of Cards'</a></dd>
 	<dt>四 19 十二月 2013</dt>
@@ -126,8 +135,28 @@
     <i class="icon-folder-open icon-large"></i>Linux
 </a>
 </li>
+<li>
+<a href="/category/other.html">
+    <i class="icon-folder-open icon-large"></i>Other
+</a>
+</li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-4">
+    <a href="/tag/tv.html">
+        <i class="icon-tag icon-large"></i>TV
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/exam.html">
+        <i class="icon-tag icon-large"></i>exam
+    </a>
+</li>
+<li class="tag-1">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
 <li class="tag-4">
     <a href="/tag/linux.html">
         <i class="icon-tag icon-large"></i>Linux
@@ -138,14 +167,19 @@
         <i class="icon-tag icon-large"></i>Writing
     </a>
 </li>
-<li class="tag-1">
-    <a href="/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
+<li class="tag-4">
+    <a href="/tag/linuxvim.html">
+        <i class="icon-tag icon-large"></i>Linux，Vim
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/tv.html">
-        <i class="icon-tag icon-large"></i>TV
+    <a href="/tag/certification.html">
+        <i class="icon-tag icon-large"></i>certification
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/patent.html">
+        <i class="icon-tag icon-large"></i>patent
     </a>
 </li>
 
