--- a/zhuan-li-dai-li-ren-kao-shi.html
+++ b/zhuan-li-dai-li-ren-kao-shi.html
@@ -64,7 +64,7 @@
           <div class="nav-collapse">
             <ul class="nav">
                           <li class="divider-vertical"></li>
-                  <li >
+                  <li class="active">
                     <a href="/category/life.html">
 						<i class="icon-folder-open icon-large"></i>Life
 					</a>
@@ -72,11 +72,6 @@
                   <li >
                     <a href="/category/linux.html">
 						<i class="icon-folder-open icon-large"></i>Linux
-					</a>
-                  </li>
-                  <li class="active">
-                    <a href="/category/other.html">
-						<i class="icon-folder-open icon-large"></i>Other
 					</a>
                   </li>
 
@@ -115,7 +110,7 @@
 <span class="label">By</span>
 <a href="/author/.html"><i class="icon-user"></i></a>
 <span class="label">Category</span>
-<a href="/category/other.html"><i class="icon-folder-open"></i>Other</a>.
+<a href="/category/life.html"><i class="icon-folder-open"></i>Life</a>.
 
 
 <span class="label">Tags</span>
@@ -157,13 +152,23 @@
     <i class="icon-folder-open icon-large"></i>Linux
 </a>
 </li>
-<li>
-<a href="/category/other.html">
-    <i class="icon-folder-open icon-large"></i>Other
-</a>
-</li>
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-4">
+    <a href="/tag/certification.html">
+        <i class="icon-tag icon-large"></i>certification
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/linux.html">
+        <i class="icon-tag icon-large"></i>Linux
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/linuxvim.html">
+        <i class="icon-tag icon-large"></i>Linux，Vim
+    </a>
+</li>
 <li class="tag-4">
     <a href="/tag/tv.html">
         <i class="icon-tag icon-large"></i>TV
@@ -174,34 +179,14 @@
         <i class="icon-tag icon-large"></i>exam
     </a>
 </li>
-<li class="tag-1">
-    <a href="/tag/life.html">
-        <i class="icon-tag icon-large"></i>Life
-    </a>
-</li>
-<li class="tag-4">
-    <a href="/tag/linux.html">
-        <i class="icon-tag icon-large"></i>Linux
-    </a>
-</li>
-<li class="tag-4">
-    <a href="/tag/writing.html">
-        <i class="icon-tag icon-large"></i>Writing
-    </a>
-</li>
-<li class="tag-4">
-    <a href="/tag/linuxvim.html">
-        <i class="icon-tag icon-large"></i>Linux，Vim
-    </a>
-</li>
-<li class="tag-4">
-    <a href="/tag/certification.html">
-        <i class="icon-tag icon-large"></i>certification
-    </a>
-</li>
 <li class="tag-4">
     <a href="/tag/patent.html">
         <i class="icon-tag icon-large"></i>patent
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/life.html">
+        <i class="icon-tag icon-large"></i>Life
     </a>
 </li>
 
