--- a/lines-in-house-of-cards.html
+++ b/lines-in-house-of-cards.html
@@ -161,18 +161,8 @@
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-4">
-    <a href="/tag/certification.html">
-        <i class="icon-tag icon-large"></i>certification
-    </a>
-</li>
-<li class="tag-4">
-    <a href="/tag/linux.html">
-        <i class="icon-tag icon-large"></i>Linux
-    </a>
-</li>
-<li class="tag-4">
-    <a href="/tag/linuxvim.html">
-        <i class="icon-tag icon-large"></i>Linux，Vim
+    <a href="/tag/patent.html">
+        <i class="icon-tag icon-large"></i>Patent
     </a>
 </li>
 <li class="tag-4">
@@ -181,18 +171,28 @@
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/exam.html">
-        <i class="icon-tag icon-large"></i>exam
+    <a href="/tag/linux.html">
+        <i class="icon-tag icon-large"></i>Linux
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/patent.html">
-        <i class="icon-tag icon-large"></i>patent
+    <a href="/tag/certification.html">
+        <i class="icon-tag icon-large"></i>Certification
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/linuxvim.html">
+        <i class="icon-tag icon-large"></i>Linux，Vim
     </a>
 </li>
 <li class="tag-4">
     <a href="/tag/life.html">
         <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/exam.html">
+        <i class="icon-tag icon-large"></i>Exam
     </a>
 </li>
 
