--- a/lines-in-house-of-cards.html
+++ b/lines-in-house-of-cards.html
@@ -130,6 +130,11 @@
 <li>What a martyr craves more than anything is a sword to fall on, so you sharppen the blade, hold it at just the right angle, and then 3,2,1..(烈士最渴求的就是壮烈牺牲，所以，你磨好兵刃，调整好角度，默数3,2,1)</li>
 <li>She's right.I should take batter care of myself.But it's the principle.I won't be a slave to anybody or anything you can order with a toll-free number.(她是对的，我应该照顾好自己。但这是原则问题。我绝不受任何人或者免费电话能订的东西的摆布。)</li>
 </ol>
+<h2>House Of Cards S01E03</h2>
+<ol>
+<li>Power's a lot like real estate. It's all about location, location, location. The closer you are to the source, the higher you property value. 权力正如地产。位置是重中之重。你离中心越近，你的财产就越值钱。</li>
+<li></li>
+</ol>
                 </div><!-- /.entry-content -->
         </article>
 </section>
@@ -161,11 +166,6 @@
 
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-4">
-    <a href="/tag/tv.html">
-        <i class="icon-tag icon-large"></i>TV
-    </a>
-</li>
-<li class="tag-4">
     <a href="/tag/certification.html">
         <i class="icon-tag icon-large"></i>Certification
     </a>
@@ -176,13 +176,13 @@
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/linux.html">
-        <i class="icon-tag icon-large"></i>Linux
+    <a href="/tag/tv.html">
+        <i class="icon-tag icon-large"></i>TV
     </a>
 </li>
 <li class="tag-4">
-    <a href="/tag/patent.html">
-        <i class="icon-tag icon-large"></i>Patent
+    <a href="/tag/linux.html">
+        <i class="icon-tag icon-large"></i>Linux
     </a>
 </li>
 <li class="tag-4">
@@ -193,6 +193,11 @@
 <li class="tag-4">
     <a href="/tag/life.html">
         <i class="icon-tag icon-large"></i>Life
+    </a>
+</li>
+<li class="tag-4">
+    <a href="/tag/patent.html">
+        <i class="icon-tag icon-large"></i>Patent
     </a>
 </li>
 
