--- a/archives.html
+++ b/archives.html
@@ -1,52 +1,72 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
-        <title>LovelyMonkeyM</title>
-        <meta charset="utf-8" />
+	<meta charset="utf-8">
+	<title>LovelyMonkeyM</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-        <link rel="stylesheet" href="/theme/css/rdark.css" />
-	<link rel="stylesheet" type="text/css" href="/theme/css/main.css" />
-        <link href="/" type="application/atom+xml" rel="alternate" title="LovelyMonkeyM ATOM Feed" /><!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	
-<!-- Using MathJax, with the delimiters $ -->
-<!-- Conflict with pygments for the .mo and .mi -->
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-  "HTML-CSS": {
-  styles: {
-  ".MathJax .mo, .MathJax .mi": {color: "black ! important"}}
-  },
-  tex2jax: {inlineMath: [['$','$'], ['\\\\(','\\\\)']],processEscapes: true}
-  });
-</script>
+	<!-- HTML5 shim, for IE6-8 support of HTML elements -->
+	<!--[if lt IE 9]>
+		<script src="/theme/html5.js"></script>
+	<![endif]-->
 
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+	<!-- Styles -->
+	<link href="/theme/bootstrap.min.css" rel="stylesheet">
+	<link href="/theme/local.css" rel="stylesheet">
+	<link href="/theme/pygments.css" rel="stylesheet">
+
+    <!-- Feeds -->
+
 </head>
-</head>
+<body>
+	<div class="topbar">
+	  <div class="topbar-inner">
+		<div class="container-fluid">
+		  <a class="brand" href="/">LovelyMonkeyM</a>
+			<ul class="nav">
+					<li ><a href="/category/life.html">Life</a></li>
+					<li ><a href="/category/linux.html">Linux</a></li>
+			</ul>
+			<p class="pull-right"><a href="/archives.html">[archives]</a> <a href="/tags.html">[tags]</a></p>
+		</div>
+	  </div>
+	</div>
 
-<body id="index" class="home">
-        <header id="banner" class="body">
-                <h1><a href="">LovelyMonkeyM <strong></strong></a></h1>
-        </header><!-- /#banner -->
-        <nav id="menu"><ul>
-        </ul></nav><!-- /#menu -->
-<h1>Archives for LovelyMonkeyM</h1>
+	<div class="container-fluid">
+	  <div class="sidebar">
+		<div class="well">
+			<h3>Blogroll</h3>
+			<ul>
+				<li><a href="http://getpelican.com/">Pelican</a></li>
+				<li><a href="http://python.org/">Python.org</a></li>
+				<li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
+				<li><a href="#">You can modify those links in your config file</a></li>
+			</ul>
+			<div class="social">
+			<h3>Social</h3>
+			<ul>
+				<li><a href="#">You can add links in your config file</a></li>
+				<li><a href="#">Another social link</a></li>
+			</ul>
+			</div>
+		</div>
+	  </div>
+	  <div class="content">
+<div class="page-header"><h1>LovelyMonkeyM <small>[archive]</small></h1></div><h2>2013</h2>
+<h3>December</h3>
+<ul>
+	<li><a href="zhuan-li-dai-li-ren-kao-shi.html">专利代理人考试</a></li>
+	<li><a href="vimxiu-gai-pei-zhi.html">Vim修改配置</a></li>
+	<li><a href="lines-in-house-of-cards.html">Lines in 'House Of Cards'</a></li>
+	<li><a href="linuxde-rootdeng-lu-he-mi-ma-she-zhi.html">Linux的root登录和密码设置</a></li>
+</ul>
+		<footer>
+		  <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
+		  <p>&copy; </p>
+		</footer>
+	  </div>
 
-<dl>
-    <dt>六 28 十二月 2013</dt>
-    <dd><a href="/zhuan-li-dai-li-ren-kao-shi.html">专利代理人考试</a></dd>
-    <dt>五 27 十二月 2013</dt>
-    <dd><a href="/vimxiu-gai-pei-zhi.html">Vim修改配置</a></dd>
-    <dt>四 19 十二月 2013</dt>
-    <dd><a href="/lines-in-house-of-cards.html">Lines in 'House Of Cards'</a></dd>
-    <dt>四 19 十二月 2013</dt>
-    <dd><a href="/linuxde-rootdeng-lu-he-mi-ma-she-zhi.html">Linux的root登录和密码设置</a></dd>
-</dl>
-        <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.
-                </address><!-- /#about -->
-        </footer><!-- /#contentinfo -->
+	</div>
 </body>
 </html>
