--- a/archives.html
+++ b/archives.html
@@ -1,72 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>LovelyMonkeyM</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+        <title>LovelyMonkeyM</title>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="/theme/css/main.css" type="text/css" />
 
-	<!-- HTML5 shim, for IE6-8 support of HTML elements -->
-	<!--[if lt IE 9]>
-		<script src="/theme/html5.js"></script>
-	<![endif]-->
+        <!--[if IE]>
+                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-	<!-- Styles -->
-	<link href="/theme/bootstrap.min.css" rel="stylesheet">
-	<link href="/theme/local.css" rel="stylesheet">
-	<link href="/theme/pygments.css" rel="stylesheet">
+        <!--[if lte IE 7]>
+                <link rel="stylesheet" type="text/css" media="all" href="/css/ie.css"/>
+                <script src="/js/IE8.js" type="text/javascript"></script><![endif]-->
 
-    <!-- Feeds -->
+        <!--[if lt IE 7]>
+                <link rel="stylesheet" type="text/css" media="all" href="/css/ie6.css"/><![endif]-->
 
 </head>
-<body>
-	<div class="topbar">
-	  <div class="topbar-inner">
-		<div class="container-fluid">
-		  <a class="brand" href="/">LovelyMonkeyM</a>
-			<ul class="nav">
-					<li ><a href="/category/life.html">Life</a></li>
-					<li ><a href="/category/linux.html">Linux</a></li>
-			</ul>
-			<p class="pull-right"><a href="/archives.html">[archives]</a> <a href="/tags.html">[tags]</a></p>
-		</div>
-	  </div>
-	</div>
 
-	<div class="container-fluid">
-	  <div class="sidebar">
-		<div class="well">
-			<h3>Blogroll</h3>
-			<ul>
-				<li><a href="http://getpelican.com/">Pelican</a></li>
-				<li><a href="http://python.org/">Python.org</a></li>
-				<li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-				<li><a href="#">You can modify those links in your config file</a></li>
-			</ul>
-			<div class="social">
-			<h3>Social</h3>
-			<ul>
-				<li><a href="#">You can add links in your config file</a></li>
-				<li><a href="#">Another social link</a></li>
-			</ul>
-			</div>
-		</div>
-	  </div>
-	  <div class="content">
-<div class="page-header"><h1>LovelyMonkeyM <small>[archive]</small></h1></div><h2>2013</h2>
-<h3>December</h3>
-<ul>
-	<li><a href="zhuan-li-dai-li-ren-kao-shi.html">专利代理人考试</a></li>
-	<li><a href="vimxiu-gai-pei-zhi.html">Vim修改配置</a></li>
-	<li><a href="lines-in-house-of-cards.html">Lines in 'House Of Cards'</a></li>
-	<li><a href="linuxde-rootdeng-lu-he-mi-ma-she-zhi.html">Linux的root登录和密码设置</a></li>
-</ul>
-		<footer>
-		  <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
-		  <p>&copy; </p>
-		</footer>
-	  </div>
+<body id="index" class="home">
+        <header id="banner" class="body">
+                <h1><a href="">LovelyMonkeyM </a></h1>
+                <nav>
+                    <a href="/category/life.html">Life</a>&nbsp;
+                    <a href="/category/linux.html">Linux</a>&nbsp;
+                </nav>
+        </header><!-- /#banner -->
+<section id="content" class="body">
+<h1>Archives for LovelyMonkeyM</h1>
 
-	</div>
+<dl>
+    <dt>六 28 十二月 2013</dt>
+    <dd><a href="/zhuan-li-dai-li-ren-kao-shi.html">专利代理人考试</a></dd>
+    <dt>五 27 十二月 2013</dt>
+    <dd><a href="/vimxiu-gai-pei-zhi.html">Vim修改配置</a></dd>
+    <dt>四 19 十二月 2013</dt>
+    <dd><a href="/lines-in-house-of-cards.html">Lines in 'House Of Cards'</a></dd>
+    <dt>四 19 十二月 2013</dt>
+    <dd><a href="/linuxde-rootdeng-lu-he-mi-ma-she-zhi.html">Linux的root登录和密码设置</a></dd>
+</dl>
+</section>
+        <section id="extras" class="body">
+                <div class="blogroll">
+                        <h2>blogroll</h2>
+                        <ul>
+                            <li><a href="http://getpelican.com/">Pelican</a></li>
+                            <li><a href="http://python.org/">Python.org</a></li>
+                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
+                            <li><a href="#">You can modify those links in your config file</a></li>
+                        </ul>
+                </div><!-- /.blogroll -->
+                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="/" type="application/atom+xml" rel="alternate">atom feed</a></li>
+
+                            <li><a href="#">You can add links in your config file</a></li>
+                            <li><a href="#">Another social link</a></li>
+                        </ul>
+                </div><!-- /.social -->
+        </section><!-- /#extras -->
+
+        <footer id="contentinfo" class="body">
+                <address id="about" class="vcard body">
+                     Proudly powered by <a href="http://getpelican.com/">Pelican</a>, which takes great advantage of <a href="http://python.org">Python</a>. Theme is using <a href="http://github.com/getpelican/pelican-themes" target="_blank">cebong</a>.
+                </address><!-- /#about -->
+
+        </footer><!-- /#contentinfo -->
+
 </body>
 </html>
