--- a/tags.html
+++ b/tags.html
@@ -1,73 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>LovelyMonkeyM</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
+        <title>LovelyMonkeyM - Tags</title>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="/theme/css/main.css" type="text/css" />
 
-	<!-- HTML5 shim, for IE6-8 support of HTML elements -->
-	<!--[if lt IE 9]>
-		<script src="/theme/html5.js"></script>
-	<![endif]-->
+        <!--[if IE]>
+                <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 
-	<!-- Styles -->
-	<link href="/theme/bootstrap.min.css" rel="stylesheet">
-	<link href="/theme/local.css" rel="stylesheet">
-	<link href="/theme/pygments.css" rel="stylesheet">
+        <!--[if lte IE 7]>
+                <link rel="stylesheet" type="text/css" media="all" href="/css/ie.css"/>
+                <script src="/js/IE8.js" type="text/javascript"></script><![endif]-->
 
-    <!-- Feeds -->
+        <!--[if lt IE 7]>
+                <link rel="stylesheet" type="text/css" media="all" href="/css/ie6.css"/><![endif]-->
 
 </head>
-<body>
-	<div class="topbar">
-	  <div class="topbar-inner">
-		<div class="container-fluid">
-		  <a class="brand" href="/">LovelyMonkeyM</a>
-			<ul class="nav">
-					<li ><a href="/category/life.html">Life</a></li>
-					<li ><a href="/category/linux.html">Linux</a></li>
-			</ul>
-			<p class="pull-right"><a href="/archives.html">[archives]</a> <a href="/tags.html">[tags]</a></p>
-		</div>
-	  </div>
-	</div>
 
-	<div class="container-fluid">
-	  <div class="sidebar">
-		<div class="well">
-			<h3>Blogroll</h3>
-			<ul>
-				<li><a href="http://getpelican.com/">Pelican</a></li>
-				<li><a href="http://python.org/">Python.org</a></li>
-				<li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-				<li><a href="#">You can modify those links in your config file</a></li>
-			</ul>
-			<div class="social">
-			<h3>Social</h3>
-			<ul>
-				<li><a href="#">You can add links in your config file</a></li>
-				<li><a href="#">Another social link</a></li>
-			</ul>
-			</div>
-		</div>
-	  </div>
-	  <div class="content">
-<div class="page-header"><h1>LovelyMonkeyM <small>[tags]</small></h1></div><ul>
-	<li><a href="/tag/life.html">Life</a></li>
-	<li><a href="/tag/exam.html">Exam</a></li>
-	<li><a href="/tag/certification.html">Certification</a></li>
-	<li><a href="/tag/tv.html">TV</a></li>
-	<li><a href="/tag/patent.html">Patent</a></li>
-	<li><a href="/tag/linux.html">Linux</a></li>
-	<li><a href="/tag/linuxvim.html">Linux，Vim</a></li>
-</ul>
-		<footer>
-		  <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
-		  <p>&copy; </p>
-		</footer>
-	  </div>
+<body id="index" class="home">
+        <header id="banner" class="body">
+                <h1><a href="">LovelyMonkeyM </a></h1>
+                <nav>
+                    <a href="/category/life.html">Life</a>&nbsp;
+                    <a href="/category/linux.html">Linux</a>&nbsp;
+                </nav>
+        </header><!-- /#banner -->
+    <h1>Tags for LovelyMonkeyM</h1>        <li><a href="/tag/certification.html">Certification</a> (1)</li>
+        <li><a href="/tag/exam.html">Exam</a> (1)</li>
+        <li><a href="/tag/life.html">Life</a> (1)</li>
+        <li><a href="/tag/linux.html">Linux</a> (1)</li>
+        <li><a href="/tag/linuxvim.html">Linux，Vim</a> (1)</li>
+        <li><a href="/tag/patent.html">Patent</a> (1)</li>
+        <li><a href="/tag/tv.html">TV</a> (1)</li>
+        <section id="extras" class="body">
+                <div class="blogroll">
+                        <h2>blogroll</h2>
+                        <ul>
+                            <li><a href="http://getpelican.com/">Pelican</a></li>
+                            <li><a href="http://python.org/">Python.org</a></li>
+                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
+                            <li><a href="#">You can modify those links in your config file</a></li>
+                        </ul>
+                </div><!-- /.blogroll -->
+                <div class="social">
+                        <h2>social</h2>
+                        <ul>
+                            <li><a href="/" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
-	</div>
+                            <li><a href="#">You can add links in your config file</a></li>
+                            <li><a href="#">Another social link</a></li>
+                        </ul>
+                </div><!-- /.social -->
+        </section><!-- /#extras -->
+
+        <footer id="contentinfo" class="body">
+                <address id="about" class="vcard body">
+                     Proudly powered by <a href="http://getpelican.com/">Pelican</a>, which takes great advantage of <a href="http://python.org">Python</a>. Theme is using <a href="http://github.com/getpelican/pelican-themes" target="_blank">cebong</a>.
+                </address><!-- /#about -->
+
+        </footer><!-- /#contentinfo -->
+
 </body>
 </html>
