--- a/tags.html
+++ b/tags.html
@@ -1,28 +1,62 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-        <title>LovelyMonkeyM - Tags</title>
-        <meta charset="utf-8" />
+		<title>LovelyMonkeyM &mdash; Tags</title>
+		<meta charset="utf-8" />
+		<link rel="profile" href="http://gmpg.org/xfn/11" />
+		<link rel="stylesheet" type="text/css" href="/theme/css/style.css" />
+		<link rel='stylesheet' id='oswald-css'  href='http://fonts.googleapis.com/css?family=Oswald&#038;ver=3.3.2' type='text/css' media='all' />
+		<style type="text/css">
+			body.custom-background { background-color: #f5f5f5; }
+		</style>
+		<link rel="alternate" type="application/atom+xml"
+			title="LovelyMonkeyM — Flux Atom"
+			href="/" /> 
+		<!--[if lte IE 8]><script src="/theme/js/html5shiv.js"></script><![endif]-->
 </head>
 
-<body id="index" class="home">
-        <header id="banner" class="body">
-                <h1><a href="">LovelyMonkeyM <strong></strong></a></h1>
-        </header><!-- /#banner -->
-        <nav id="menu"><ul>
-        </ul></nav><!-- /#menu -->
-    <h1>Tags for LovelyMonkeyM</h1>        <li><a href="/tag/certification.html">Certification</a> (1)</li>
-        <li><a href="/tag/exam.html">Exam</a> (1)</li>
-        <li><a href="/tag/life.html">Life</a> (1)</li>
-        <li><a href="/tag/linux.html">Linux</a> (1)</li>
-        <li><a href="/tag/linuxvim.html">Linux，Vim</a> (1)</li>
-        <li><a href="/tag/patent.html">Patent</a> (1)</li>
-        <li><a href="/tag/tv.html">TV</a> (1)</li>
-        <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.
-                </address><!-- /#about -->
-        </footer><!-- /#contentinfo -->
+<body class="home blog custom-background " >
+	<div id="container">
+		<div id="header">
+				<h1 id="site-title"><a href="">LovelyMonkeyM</a></h1>
+		</div><!-- /#banner -->
+		
+		<div id="menu">
+			<div class="menu-navigation-container">
+				<ul id="menu-navigation" class="menu">
+						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/life.html">Life</a></li>
+						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/linux.html">Linux</a></li>
+						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="http://getpelican.com/">Pelican</a></li>
+						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="http://python.org/">Python.org</a></li>
+						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="http://jinja.pocoo.org/">Jinja2</a></li>
+						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="#">You can modify those links in your config file</a></li>
+
+				</ul>
+			</div> <!--/#menu-navigation-container-->
+		</div><!-- /#menu -->
+		
+		<div class="page-title">
+<div class="page-title">
+	<h2>Tags on <span>LovelyMonkeyM</span> &hellip;</h2>
+</div>
+		</div>
+	
+		<div id="contents">
+<ul>
+    <li><a href="/tag/life.html">Life</a></li>
+    <li><a href="/tag/exam.html">Exam</a></li>
+    <li><a href="/tag/certification.html">Certification</a></li>
+    <li><a href="/tag/tv.html">TV</a></li>
+    <li><a href="/tag/patent.html">Patent</a></li>
+    <li><a href="/tag/linux.html">Linux</a></li>
+    <li><a href="/tag/linuxvim.html">Linux，Vim</a></li>
+</ul>
+		</div>
+		
+		<div id="footer">
+			<p>Powered by <a href="http://getpelican.com">Pelican</a>, theme by <a href="http://bunnyman.info">tBunnyMan</a>.</p>
+		</div><!-- /#footer -->
+	</div><!-- /#container -->
+	<div style="display:none"></div>
 </body>
 </html>
