--- a/authors.html
+++ b/authors.html
@@ -39,11 +39,20 @@
 		</div>
 	
 		<div id="contents">
-    <h1>Authors on LovelyMonkeyM</h1>		</div>
+    <h1>Authors on LovelyMonkeyM</h1>        <li><a href="/author/monkey.html">Monkey</a> (4)</li>
+		</div>
 		
 		<div id="footer">
 			<p>Powered by <a href="http://getpelican.com">Pelican</a>, theme by <a href="http://bunnyman.info">tBunnyMan</a>.</p>
-		</div><!-- /#footer -->
+<script type="text/javascript">
+    var disqus_shortname = 'LovelyMonkeyM';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>		</div><!-- /#footer -->
 	</div><!-- /#container -->
 	<div style="display:none"></div>
 </body>
