--- a/tags.html
+++ b/tags.html
@@ -55,7 +55,15 @@
 		
 		<div id="footer">
 			<p>Powered by <a href="http://getpelican.com">Pelican</a>, theme by <a href="http://bunnyman.info">tBunnyMan</a>.</p>
-		</div><!-- /#footer -->
+<script type="text/javascript">
+    var disqus_shortname = 'LovelyMonkeyM';
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>		</div><!-- /#footer -->
 	</div><!-- /#container -->
 	<div style="display:none"></div>
 </body>
