--- a/tags.html
+++ b/tags.html
@@ -26,7 +26,6 @@
 				<ul id="menu-navigation" class="menu">
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/life.html">Life</a></li>
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/linux.html">Linux</a></li>
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://lovelymonkeym.github.io">GitHub</a></li>
 
 				</ul>
 			</div> <!--/#menu-navigation-container-->
@@ -40,13 +39,12 @@
 	
 		<div id="contents">
 <ul>
-    <li><a href="/tag/life.html">Life</a></li>
+    <li><a href="/tag/.html"></a></li>
     <li><a href="/tag/exam.html">Exam</a></li>
     <li><a href="/tag/certification.html">Certification</a></li>
     <li><a href="/tag/tv.html">TV</a></li>
+    <li><a href="/tag/vim.html">Vim</a></li>
     <li><a href="/tag/patent.html">Patent</a></li>
-    <li><a href="/tag/linux.html">Linux</a></li>
-    <li><a href="/tag/linuxvim.html">Linux，Vim</a></li>
 </ul>
 		</div>
 		
