--- a/vimxiu-gai-pei-zhi.html
+++ b/vimxiu-gai-pei-zhi.html
@@ -26,7 +26,6 @@
 				<ul id="menu-navigation" class="menu">
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/life.html">Life</a></li>
 						<li class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/linux.html">Linux</a></li>
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://lovelymonkeym.github.io">GitHub</a></li>
 
 				</ul>
 			</div> <!--/#menu-navigation-container-->
@@ -77,7 +76,7 @@
 </ol>
 		</div> <!--/#entry-content-->
     		<span class="tag-links"><strong>Tagged</strong>
- <a href="/tag/linuxvim.html" rel="tag">Linux，Vim</a>    		</span>
+ <a href="/tag/vim.html" rel="tag">Vim</a>    		</span>
 	</div> <!--/#main-->
 </div>  <!--/#post-->
 	<div id="comments">
