--- a/lines-in-house-of-cards.html
+++ b/lines-in-house-of-cards.html
@@ -26,7 +26,6 @@
 				<ul id="menu-navigation" class="menu">
 						<li class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/life.html">Life</a></li>
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/linux.html">Linux</a></li>
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://lovelymonkeym.github.io">GitHub</a></li>
 
 				</ul>
 			</div> <!--/#menu-navigation-container-->
@@ -69,7 +68,7 @@
 </ol>
 		</div> <!--/#entry-content-->
     		<span class="tag-links"><strong>Tagged</strong>
- <a href="/tag/life.html" rel="tag">Life</a>,  <a href="/tag/tv.html" rel="tag">TV</a>    		</span>
+ <a href="/tag/tv.html" rel="tag">TV</a>    		</span>
 	</div> <!--/#main-->
 </div>  <!--/#post-->
 	<div id="comments">
