--- a/linuxde-rootdeng-lu-he-mi-ma-she-zhi.html
+++ b/linuxde-rootdeng-lu-he-mi-ma-she-zhi.html
@@ -26,7 +26,6 @@
 				<ul id="menu-navigation" class="menu">
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/life.html">Life</a></li>
 						<li class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/linux.html">Linux</a></li>
-						<li  class="active" class="menu-item menu-item-type-post_type menu-item-object-page"><a href="https://lovelymonkeym.github.io">GitHub</a></li>
 
 				</ul>
 			</div> <!--/#menu-navigation-container-->
@@ -58,7 +57,7 @@
 </pre></div>
 		</div> <!--/#entry-content-->
     		<span class="tag-links"><strong>Tagged</strong>
- <a href="/tag/linux.html" rel="tag">Linux</a>    		</span>
+ <a href="/tag/.html" rel="tag"></a>    		</span>
 	</div> <!--/#main-->
 </div>  <!--/#post-->
 	<div id="comments">
