--- a/authors.html
+++ b/authors.html
@@ -26,6 +26,7 @@
 				<ul id="menu-navigation" class="menu">
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/life.html">Life</a></li>
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/linux.html">Linux</a></li>
+						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/python.html">Python</a></li>
 
 				</ul>
 			</div> <!--/#menu-navigation-container-->
@@ -35,7 +36,7 @@
 		</div>
 	
 		<div id="contents">
-    <h1>Authors on LovelyMonkeyM</h1>        <li><a href="/author/monkey.html">Monkey</a> (3)</li>
+    <h1>Authors on LovelyMonkeyM</h1>        <li><a href="/author/monkey.html">Monkey</a> (4)</li>
 		</div>
 		
 		<div id="footer">
