--- a/tags.html
+++ b/tags.html
@@ -26,6 +26,7 @@
 				<ul id="menu-navigation" class="menu">
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/life.html">Life</a></li>
 						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/linux.html">Linux</a></li>
+						<li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/category/python.html">Python</a></li>
 
 				</ul>
 			</div> <!--/#menu-navigation-container-->
@@ -42,6 +43,7 @@
     <li><a href="/tag/tv.html">TV</a></li>
     <li><a href="/tag/.html"></a></li>
     <li><a href="/tag/vim.html">Vim</a></li>
+    <li><a href="/tag/python.html">Python</a></li>
 </ul>
 		</div>
 		
